# showmaker

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindBenchmark.cmake  FindGTestSrc.cmake
doc/: GL Renderer.eapx
examples/: CMakeLists.txt  win32_app.cpp
examples/editor/: CMakeLists.txt  editor_app.cpp
examples/text/: CMakeLists.txt  text_app.cpp
examples/win32_app/: CMakeLists.txt  win32_app.cpp
include/: application.h  window.h
platform_tools/android/Application/app/: build.gradle
platform_tools/android/Application/app/src/main/: AndroidManifest.xml
platform_tools/android/Application/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
platform_tools/android/Application/app/src/main/java/com/example/application/: MainActivity.java
platform_tools/android/Application/gradle/wrapper/: gradle-wrapper.properties
src/: CMakeLists.txt  display_params.cpp  display_params.h  gl_window_context.cpp  gl_window_context.h  layer.cpp  layer.h  task_runner_host.cpp  task_runner_host.h  window.cpp  window_context.cpp  window_context.h
src/component/editor/: editor.cpp  editor.h  editor_layer.cpp  editor_layer.h  editor_type.cpp  editor_type.h  shape.cpp  shape.h  string_slice.cpp  string_slice.h  string_view.h  word_boundaries.cpp  word_boundaries.h
src/css/: CMakeLists.txt  color.cpp  color.h
src/engine/: CMakeLists.txt  engine.cpp  engine.h  task_runners.cpp  task_runners.h  thread_host.cpp  thread_host.h
src/engine/animator/: CMakeLists.txt  animator.cpp  animator.h  vsync_waiter.cpp  vsync_waiter.h
src/engine/animator/platform/win32/: vsync_waiter_win32.cpp  vsync_waiter_win32.h
src/engine/rasterizer/: CMakeLists.txt  rasterizer.cpp  rasterizer.h
src/graphics/: CMakeLists.txt  offset.cpp  offset.h  position.cpp  position.h  radius.cpp  radius.h  rect.cpp  rect.h  rrect.cpp  rrect.h  size.cpp  size.h
src/node/: abstract_node.cpp  abstract_node.h  node.cpp  node.h
src/platform/windows/: angle_gl_window_context.cpp  angle_gl_window_context.h  gl_window_context_win32.cpp  gl_window_context_win32.h  window_win32.cpp  window_win32.h
src/render/: CMakeLists.txt  canvas_scope.cpp  canvas_scope.h  clipping_box.cpp  clipping_box.h  drawable.cpp  drawable.h  element.cpp  element.h  layout.cpp  layout.h  position2d.cpp  position2d.h  shape.cpp  shape.h  size.cpp  size.h
src/render/compositing/: scene.cpp  scene.h  scene_builder.cpp  scene_builder.h
src/render/elements/: editable_text.cpp  editable_text.h  element.cpp  element.h  label.cpp  label.h  view.cpp  view.h
src/render/layer/: CMakeLists.txt  clip_path_layer.cpp  clip_path_layer.h  clip_rect_layer.cpp  clip_rect_layer.h  clip_rrect_layer.cpp  clip_rrect_layer.h  container_layer.cpp  container_layer.h  follower_layer.cpp  follower_layer.h  layer.cpp  layer.h  layer_link.cpp  layer_link.h  leader_layer.cpp  leader_layer.h  offset_layer.cpp  offset_layer.h  performance_overlay_layer.cpp  performance_overlay_layer.h  picture_layer.cpp  picture_layer.h  transform_layer.cpp  transform_layer.h
src/render/layout/: column.cpp  column.h
src/render/painting/: CMakeLists.txt  canvas.cpp  canvas.h  canvas_path.cpp  canvas_path.h  clip.h  paint_context.cpp  paint_context.h  picture.cpp  picture.h  picture_recorder.cpp  picture_recorder.h
src/render/pipeline/: CMakeLists.txt  pipeline_owner.cpp  pipeline_owner.h  render_object.cpp  render_object.h  render_pipeline.cpp  render_pipeline.h
src/render/render_object/: CMakeLists.txt  render_aligning_shifted_box.cpp  render_aligning_shifted_box.h  render_box.cpp  render_box.h  render_object.cpp  render_object.h  render_positioned_box.cpp  render_positioned_box.h  render_shifted_box.cpp  render_shifted_box.h
src/render/shape/: CMakeLists.txt  rectangle.cpp  rectangle.h  text.cpp  text.h
src/render/shape/text/: font_collection.cpp  font_collection.h  paragraph.cpp  paragraph.h  paragraph_builder.cpp  paragraph_builder.h  text_editing_value.cpp  text_editing_value.h  text_input_client.h  text_style.cpp  text_style.h
src/render/style/: border.cpp  border.h  line.cpp  line.h
src/semantics/: CMakeLists.txt  semantics_configuration.cpp  semantics_configuration.h  semantics_handle.cpp  semantics_handle.h  semantics_owner.cpp  semantics_owner.h
src/shell/: CMakeLists.txt
src/shell/platform/android/: library_loader.cpp
src/surface/: angle_surface_manager.cpp  angle_surface_manager.h
src/window/: CMakeLists.txt  gl_window_context.h  window.h
src/window/platform/android/: gl_window_context_android.cpp  gl_window_context_android.h
src/window/platform/win32/: angle_gl_window_context.h  gl_window_context_win32.cpp  gl_window_context_win32.h  window_context_factory.h  window_win32.cpp  window_win32.h
src/wtf/: CMakeLists.txt  all_static.h  change_notifier.cpp  change_notifier.h  listenable.h
src/wtf/diagnostics/: CMakeLists.txt  diagnostic_level.h  diagnostic_properties_builder.cpp  diagnostic_properties_builder.h  diagnosticable.cpp  diagnosticable.h  diagnosticable_tree.cpp  diagnosticable_tree.h  diagnostics_node.cpp  diagnostics_node.h  diagnostics_property.cpp  diagnostics_property.h  diagnostics_tree_style.cpp  diagnostics_tree_style.h  prefixed_string_builder.cpp  prefixed_string_builder.h  text_tree_configuration.cpp  text_tree_configuration.h  text_tree_renderer.cpp  text_tree_renderer.h
src/wtf/meta/: CMakeLists.txt  meta.cpp  meta.h  meta_value.h  type_decriptor.h
test/: CMakeLists.txt  layer_unittest.cpp  meta_unittest.cpp  object_unittest.cpp  type_meta.cpp
