CMAKE_MINIMUM_REQUIRED(VERSION 3.17)
SET(CMAKE_CXX_STANDARD 17)
PROJECT(xxx VERSION 0.0.0
    DESCRIPTION ""
    HOMEPAGE_URL ""
    LANGUAGES CXX)

OPTION(BUILDING_SHARED "compile for shared library" OFF)
OPTION(USING_ANGLE "using angle library" ON)
OPTION(ENABLE_BENCHMARK "enable benchmark test for taskrunner" OFF)
OPTION(ENABLE_UNITTESTS "enable UT for taskrunner" OFF)
OPTION(ENABLE_EXAMPLES "enable examples for taskrunner" ON)

SET(PROJECT_ROOT_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/bin/")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/lib/")

#
ADD_DEFINITIONS(-DSK_GL)
#

INCLUDE_DIRECTORIES("${PROJECT_ROOT_PATH}/include/")
LINK_DIRECTORIES("${CMAKE_SOURCE_DIR}/lib/")

ADD_SUBDIRECTORY(third-party/ConvertUTF)
ADD_SUBDIRECTORY(third-party/taskrunner)
ADD_SUBDIRECTORY(src)

IF(ENABLE_EXAMPLES)
    ADD_SUBDIRECTORY(examples)
ENDIF()