CMAKE_MINIMUM_REQUIRED(VERSION 3.17)
SET(CMAKE_CXX_STANDARD 20)
PROJECT(showmaker VERSION 0.0.0
    DESCRIPTION ""
    HOMEPAGE_URL ""
    LANGUAGES CXX)

OPTION(BUILDING_SHARED "compile for shared library" ON)
OPTION(USING_ANGLE "using angle library" ON)
OPTION(ENABLE_BENCHMARK "enable benchmark test for taskrunner" OFF)
OPTION(ENABLE_UNITTESTS "enable UT for showmaker" OFF)
OPTION(ENABLE_EXAMPLES "enable examples for taskrunner" ON)

SET(PROJECT_ROOT_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/bin/")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/lib/")
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

#
ADD_DEFINITIONS(-DSK_GL)
ADD_DEFINITIONS(-DSK_ANGLE)
#

IF(ENABLE_UNITTESTS)
    ADD_DEFINITIONS(-DTESTING=1)
ENDIF()
INCLUDE_DIRECTORIES("${PROJECT_ROOT_PATH}/include/")
LINK_DIRECTORIES("${CMAKE_SOURCE_DIR}/lib/")

ADD_SUBDIRECTORY(third_party/ConvertUTF)
ADD_SUBDIRECTORY(third_party/flutter)
ADD_SUBDIRECTORY(third_party/harfbuzz)
ADD_SUBDIRECTORY(src)

IF(ENABLE_EXAMPLES)
    ADD_SUBDIRECTORY(examples)
ENDIF()


IF(ENABLE_UNITTESTS)
    ADD_SUBDIRECTORY(test)
ENDIF()