
ADD_SUBDIRECTORY(editor)
ADD_SUBDIRECTORY(text)

SET(EXAMPLE_SRC
    ${CMAKE_CURRENT_SOURCE_DIR}/win32_app.cpp
    )

ADD_EXECUTABLE(win32_app ${EXAMPLE_SRC})

IF(BUILDING_SHARED)
    TARGET_COMPILE_DEFINITIONS(EXAMPLE_SRC PRIVATE BUILDING_SHARED=1)
ENDIF()

TARGET_INCLUDE_DIRECTORIES(win32_app PRIVATE
    ${PROJECT_ROOT_PATH}/include
    ${PROJECT_ROOT_PATH}/src
    ${PROJECT_ROOT_PATH}/third_party/skia
    )

TARGET_LINK_LIBRARIES(win32_app PRIVATE window)

TARGET_COMPILE_DEFINITIONS(win32_app PUBLIC NOMINMAX)