ADD_SUBDIRECTORY(animator)

SET(TARGET_NAME engine)
SET(ENGINE_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(ENGINE_SRC
    ${ENGINE_SRC_DIR}/engine.cpp
    ${ENGINE_SRC_DIR}/task_runners.cpp
    ${ENGINE_SRC_DIR}/thread_host.cpp
    )

ADD_LIBRARY(${TARGET_NAME} STATIC ${ENGINE_SRC})

TARGET_LINK_LIBRARIES(${TARGET_NAME} PRIVATE animator)

TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} PUBLIC
    ${PROJECT_ROOT_PATH}/third_party
    ${PROJECT_ROOT_PATH}/third_party/flutter)
