SET(TARGET_NAME graphics)
SET(GRAPHICS_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})

SET(GRAPHICS_SRC
    ${GRAPHICS_SRC_DIR}/offset.cpp
    ${GRAPHICS_SRC_DIR}/position.cpp
    ${GRAPHICS_SRC_DIR}/size.cpp)

ADD_LIBRARY(${TARGET_NAME} STATIC ${GRAPHICS_SRC})

TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} PUBLIC
    ${PROJECT_ROOT_PATH}
    ${PROJECT_ROOT_PATH}/third_party/skia)

TARGET_LINK_LIBRARIES(${TARGET_NAME} PUBLIC)
