SET(TARGET_NAME semantics)
SET(SEMANTICS_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})

SET(SEMANTICS_SRC
    ${SEMANTICS_SRC_DIR}/semantics_configuration.cpp
    ${SEMANTICS_SRC_DIR}/semantics_handle.cpp)

ADD_LIBRARY(${TARGET_NAME} STATIC ${SEMANTICS_SRC})

TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} PUBLIC
    ${PROJECT_ROOT_PATH}
    ${PROJECT_ROOT_PATH}/src
    ${PROJECT_ROOT_PATH}/third_party
    ${PROJECT_ROOT_PATH}/third_party/skia)

TARGET_LINK_LIBRARIES(${TARGET_NAME} PUBLIC)
