SET(TARGET_NAME shell)
SET(SHELL_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})

IF(ANDROID)
    SET(SHELL_SRC
        platform/android/library_loader.cpp)
ENDIF()

ADD_LIBRARY(${TARGET_NAME} STATIC ${SHELL_SRC})

TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} PUBLIC
    ${PROJECT_ROOT_PATH}
    ${PROJECT_ROOT_PATH}/src
    ${PROJECT_ROOT_PATH}/third_party)