
ADD_SUBDIRECTORY(diagnostics)

SET(TARGET_NAME foundation)
SET(FOUNDATION_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(FOUNDATION_SRC
    ${FOUNDATION_SRC_DIR}/change_notifier.cpp
    )

ADD_LIBRARY(${TARGET_NAME} STATIC ${FOUNDATION_SRC})

TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} PUBLIC
    ${PROJECT_ROOT_PATH}
    ${PROJECT_ROOT_PATH}/src
    ${PROJECT_ROOT_PATH}/third_party)