
SET(TARGET_NAME animator)
SET(ANIMATOR_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(ANIMATOR_SRC
    ${ANIMATOR_SRC_DIR}/animator.cpp
    ${ANIMATOR_SRC_DIR}/vsync_waiter.cpp
    )

IF(WIN32)
    SET(ANIMATOR_SRC ${ANIMATOR_SRC}
        ${ANIMATOR_SRC_DIR}/platform/win32/vsync_waiter_win32.cpp)

ENDIF()

ADD_LIBRARY(${TARGET_NAME} STATIC ${ANIMATOR_SRC})

TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} PUBLIC ${ANIMATOR_SRC_DIR})