
SET(TARGET_NAME rasterizer)
SET(RASTERIZER_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(RASTERIZER_SRC
    ${RASTERIZER_SRC_DIR}/rasterizer.cpp
    )

ADD_LIBRARY(${TARGET_NAME} STATIC ${RASTERIZER_SRC})

TARGET_LINK_LIBRARIES(${TARGET_NAME} PUBLIC  flutter_fml)



TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} PUBLIC ${PROJECT_ROOT_PATH}
    ${PROJECT_ROOT_PATH}/third_party/skia)
TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} PUBLIC ${PROJECT_ROOT_PATH}/src)