SET(TARGET_NAME painting)
SET(PAINTING_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})

SET(PAINTING_SRC
    ${PAINTING_SRC_DIR}/canvas.cpp
    ${PAINTING_SRC_DIR}/canvas_path.cpp
    ${PAINTING_SRC_DIR}/paint_context.cpp
    ${PAINTING_SRC_DIR}/picture.cpp
    ${PAINTING_SRC_DIR}/picture_recorder.cpp)

ADD_LIBRARY(${TARGET_NAME} STATIC ${PAINTING_SRC})

TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} PUBLIC
    ${PROJECT_ROOT_PATH}
    ${PROJECT_ROOT_PATH}/src
    ${PROJECT_ROOT_PATH}/third_party
    ${PROJECT_ROOT_PATH}/third_party/skia)

TARGET_LINK_LIBRARIES(${TARGET_NAME} PUBLIC)
