SET(TARGET_NAME pipeline)
SET(PIPELINE_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})

SET(PIPELINE_SRC
    ${PIPELINE_SRC_DIR}/pipeline_owner.cpp
    ${PIPELINE_SRC_DIR}/render_object.cpp
    ${PIPELINE_SRC_DIR}/render_pipeline.cpp)

ADD_LIBRARY(${TARGET_NAME} STATIC ${PIPELINE_SRC})

TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} PUBLIC
    ${PROJECT_ROOT_PATH}
    ${PROJECT_ROOT_PATH}/src
    ${PROJECT_ROOT_PATH}/third_party
    ${PROJECT_ROOT_PATH}/third_party/skia)

TARGET_LINK_LIBRARIES(${TARGET_NAME} PUBLIC)
