SET(TARGET_NAME meta)
SET(META_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(META_SRC
    ${META_SRC_DIR}/meta.cpp
    )

ADD_LIBRARY(${TARGET_NAME} STATIC ${META_SRC})

TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} PUBLIC
    ${PROJECT_ROOT_PATH}
    ${PROJECT_ROOT_PATH}/src
    ${PROJECT_ROOT_PATH}/third_party)